# os-identifier

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
maps/windows/: map-release-to-build.json
maps/windows/windows_10/: map-release-to-build.json
maps/windows/windows_11/: map-release-to-build.json
maps/windows/windows_server_2019ff/: map-release-to-build.json
src/: lib.rs  util.rs
src/endoflife/: mod.rs
src/endoflife/windows/: mod.rs  windows_11.rs
src/model/: mod.rs
src/model/linux/: debian.rs  mod.rs  oracle.rs  rhel.rs  ubuntu.rs
src/model/windows/: mod.rs  windows_10.rs  windows_11.rs  windows_2000.rs  windows_7.rs  windows_8.rs  windows_server_1709ff.rs  windows_server_2003.rs  windows_server_2008.rs  windows_server_2008_r2.rs  windows_server_2012.rs  windows_server_2012_r2.rs  windows_server_2016.rs  windows_server_2019ff.rs  windows_vista.rs  windows_xp.rs
src/parser/: mod.rs  windows.rs
src/parser/endoflife/: mod.rs
src/parser/endoflife/linux/: debian.rs  mod.rs  oracle.rs  rhel.rs  ubuntu.rs
src/parser/endoflife/windows/: mod.rs  windows_10.rs  windows_11.rs  windows_server_2019ff.rs
src/parser/generic/: mod.rs
src/parser/generic/linux/: debian.rs  oracle.rs  rhel.rs  ubuntu.rs
src/parser/generic/windows/: mod.rs  (+3 more)
src/windows/: mod.rs  windows_10.rs  windows_11.rs  windows_2000.rs  windows_7.rs  windows_8.rs  windows_server.rs  windows_server_2003.rs  windows_server_2008.rs  windows_server_2012_r2.rs  windows_server_2019ff.rs  windows_vista.rs  windows_xp.rs
tests/: linux.rs  os.rs  windows.rs
